--- a/app/solar-sl.html
+++ b/app/solar-sl.html
@@ -12,6 +12,7 @@
   <script src="js/bootstrap.js"></script>
   <script src="js/angular.js"></script>
   <script src="js/controllers.js"></script>
+  <script src="js/utils.js"></script>
   <script src="js/KelpJSONView.js"></script>
 
 </head>
@@ -22,14 +23,14 @@
           <div class="col-md-6">
               <div class="well">
                   <form role="form">
+                      <label for="host">Host</label>
                       <div class="form-group">
-                          <label for="hostSelect">Host</label>
-                          <select class="form-control" id="hostSelect" ng-model="current.host">
-                              <option>qa01.d</option>
-                              <option>qa02.d</option>
-                              <option>qa03.d</option>
-                              <option>qa04.d</option>
-                          </select>
+                          <div class="form-control">
+                              <select id="hostSelect" ng-model="current.host"
+                                      ng-options="host as host for host in hosts">
+                              </select>
+                              <input ng-model="current.host" id ='host'/>
+                          </div>
                       </div>
                       <label for="query">Query</label>
                       <div class="form-group">
@@ -54,11 +55,11 @@
 
       <div class="row">
           <div class="col-md-6">
-              <h3>{{current.query}} on {{current.host}}</h3>
+              <h3>{{current.title}}</h3>
               <div id="jsonoutput"></div>
           </div>
           <div class="col-md-6">
-              <h3>&nbsp;</h3>
+              <h3>{{previous.title}}</h3>
               <div id="jsonoutput-previous"></div>
           </div>
       </div>
