Populate form based on query params.

--- a/app/solar-sl.html
+++ b/app/solar-sl.html
@@ -11,9 +11,11 @@
 
   <script src="js/bootstrap.js"></script>
   <script src="js/angular.js"></script>
-  <script src="js/controllers.js"></script>
-  <script src="js/utils.js"></script>
   <script src="js/KelpJSONView.js"></script>
+  <script src="js/utils.js"></script>
+  <script src="js/purl.js"></script>
+  <script src="js/controllers.js"></script>
+
 
 </head>
 <html ng-app="myApp">
