Parameterize makeSolrRequest() with host and query.

--- a/app/solar-sl.html
+++ b/app/solar-sl.html
@@ -44,7 +44,7 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <button id="submit" ng-click="makeSolrRequest()" name="submit" class="btn btn-success">Submit</button>
+                          <button id="submit" ng-click="makeSolrRequest(current.query, current.host)" name="submit" class="btn btn-success">Submit</button>
                           <button id="clear" ng-click="clear()" ame="clear" class="btn btn-danger">Clear</button>
                       </div>
                   </form>
