--- a/app/solar-sl.html
+++ b/app/solar-sl.html
@@ -6,16 +6,15 @@
   <meta name="description" content="">
   <link rel="stylesheet" href="css/app.css"/>
   <link rel="stylesheet" href="css/bootstrap.css"/>
-  <script src="js/jquery.js"></script>
   <link rel="stylesheet" href="css/KelpJSONView.css"/>
 
+  <script src="js/jquery.js"></script>
   <script src="js/bootstrap.js"></script>
   <script src="js/angular.js"></script>
   <script src="js/KelpJSONView.js"></script>
   <script src="js/utils.js"></script>
   <script src="js/purl.js"></script>
   <script src="js/controllers.js"></script>
-
 
 </head>
 <html ng-app="myApp">
@@ -34,6 +33,15 @@
                               <input ng-model="current.host" id ='host'/>
                           </div>
                       </div>
+                      <label for="core">Core</label>
+                      <div class="form-group">
+                          <div class="form-control">
+                              <select id="coreSelect" ng-model="current.core"
+                                      ng-options="core as core for core in cores">
+                              </select>
+                              <input ng-model="current.core" id="core"/>
+                          </div>
+                      </div>
                       <label for="query">Query</label>
                       <div class="form-group">
                           <div class="form-control">
@@ -44,7 +52,7 @@
                           </div>
                       </div>
                       <div class="form-group">
-                          <button id="submit" ng-click="makeSolrRequest(current.query, current.host)" name="submit" class="btn btn-success">Submit</button>
+                          <button id="submit" ng-click="makeSolrRequest(current.query, current.host, current.core)" name="submit" class="btn btn-success">Submit</button>
                           <button id="clear" ng-click="clear()" ame="clear" class="btn btn-danger">Clear</button>
                       </div>
                   </form>
