--- a/app/solar-sl.html
+++ b/app/solar-sl.html
@@ -69,7 +69,7 @@
               <div id="jsonoutput"></div>
           </div>
           <div class="col-md-6">
-              <h3>{{previous.title}}</h3>
+              <h3>{{history[0].title}}</h3>
               <div id="jsonoutput-previous"></div>
           </div>
       </div>
