--- a/app/sable.html
+++ b/app/sable.html
@@ -65,11 +65,11 @@
 
       <div class="row">
           <div class="col-md-6">
-              <h3>{{current.title}}</h3>
+              <!--<h3>{{history[0].title}}</h3>-->
               <div id="jsonoutput"></div>
           </div>
           <div class="col-md-6">
-              <h3 class="underlined" ng-click="rerunHistoryHead()">{{history[0].title}}</h3>
+              <!--<h3 class="underlined" ng-click="runHistoryHead()">{{history[1].title}}</h3>-->
               <div id="jsonoutput-previous"></div>
           </div>
       </div>
